--- a/index.html
+++ b/index.html
@@ -7,9 +7,337 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Jost&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://kit.fontawesome.com/28fe7b24bf.css" crossorigin="anonymous">
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+	<!-- header -->
+	<header class="header">
+		<a href="" class="header__item brand"><img src="./img/IMAGE.png" alt=""></a>
+		<div>
+			<a href="" class="header__item">Home</a>
+			<a href="#" class="header__item">About Us</a>
+			<a href="#" class="header__item">Services</a>
+			<a href="#" class="header__item">Pages</a>
+			<a href="#" class="header__item">Contact Us</a>
+		</div>
+	</header>
 	
+	<!-- main -->
+	<main class="main">
+
+		<!-- section-first -->
+		<section class="section-first">
+			<div class="section-first__block">
+				<h1 class="section-first__block__title">Let's Create Your Dream Interior</h1>
+				<p class="section-first__block__text">The world needs innovators and problem solvers who turn challenges into greater opportunities.</p>
+				<a href="" class="section-first__block__btn">Get Started</a>
+			</div>
+		</section>
+
+		<!-- section-second -->
+		<secton class="section-second">
+			<div class="section-second__services">
+				<div class="section-second__services__item">
+					<h2 class="section-second__services__item__title">Interior Design</h2>
+					<p class="section-second__services__item__text">Enhancing the interior to achieve a healthier environment for the people using right space.</p>
+					<a href="" class="section-second__services__item__link">View More</a>
+				</div>
+				
+				<div class="section-second__services__item">
+					<h2 class="section-second__services__item__title">Furniture</h2>
+					<p class="section-second__services__item__text">Movable articles that are used to make a room or building suitable for living or working.</p>
+					<a href="" class="section-second__services__item__link">View More</a>
+				</div>
+
+				<div class="section-second__services__item">
+					<h2 class="section-second__services__item__title">Flooring</h2>
+					<p class="section-second__services__item__text">Thin object any finished material applied over a floor structure to provide a walking surface.</p>
+					<a href="" class="section-second__services__item__link">View More</a>
+				</div>
+			</div>
+		</secton>
+
+		<!-- section-third -->
+		<section class="section-third">
+			<div class="section-third__advice">
+				<h3 class="section-third__advice__title">We Tackle The Most Challenging Designs</h3>
+				<p class="section-third__advice__text">The world needs innovators and problem solvers who turn challenges into greater opportunities. We have an insatiable curiosity about transformative trends challenging the status.</p>
+				<div class="section-third__advice__contact">
+					<div class="section-third__advice__contact__call">
+						<i class="fa-solid fa-phone"></i>
+					</div>
+					<div class="section-third__advice__contact__tel">
+						<p class="section-third__advice__contact__tel__number">012345678</p>
+						<p class="section-third__advice__contact__tel__text">Call Us Anytime</p>
+					</div>
+				</div>
+				<a href="" class="section-third__advice__btn">Get Free Estimate</a>
+			</div>
+			<img src="./img/IMAGE (2).png" alt="">
+		</section>
+
+		<!-- section-fourth -->
+		<section class="section-fourth">
+			<h4 class="section-fourth__title">What the People Thinks About Interno</h4>
+			<div class="section-fourth__about">
+				<div class="section-fourth__about__item">
+					<div class="section-fourth__about__item__person">
+						<img src="./img/IMAGE (12).png" alt="" class="section-fourth__about__item__person__photo">
+						<div class="section-fourth__about__item__person__data">
+							<h4 class="section-fourth__about__item__person__name">Lisa Clairton</h4>
+							<p class="section-fourth__about__item__person__country">New York, USA</p>
+						</div>
+					</div>
+					<p class="section-fourth__about__item__person__text">We selected Interno interior because of rigorous design background & education.</p>	
+				</div>		
+				<div class="section-fourth__about__item">
+					<div class="section-fourth__about__item__person">
+						<img src="./img/IMAGE (13).png" alt="" class="section-fourth__about__item__person__photo">
+						<div class="section-fourth__about__item__person__data">
+							<h4 class="section-fourth__about__item__person__name">David Knight</h4>
+							<p class="section-fourth__about__item__person__country">Sydney, Australia</p>
+						</div>
+					</div>
+					<p class="section-fourth__about__item__person__text">The team exceeded our expectations and emerged as leaders of our project’s.</p>	
+				</div>
+				<div class="section-fourth__about__item">
+					<div class="section-fourth__about__item__person">
+						<img src="./img/IMAGE (14).png" alt="" class="section-fourth__about__item__person__photo">
+						<div class="section-fourth__about__item__person__data">
+							<h4 class="section-fourth__about__item__person__name">Lisa Clairton</h4>
+							<p class="section-fourth__about__item__person__country">Paris, France</p>
+						</div>
+					</div>
+					<p class="section-fourth__about__item__person__text">They balanced the architectural vision and the project realities beautifully.</p>	
+				</div>
+			</div>
+		</section>
+
+		<!-- section-fifth -->
+		<section class="section-fifth">
+			<div class="section-fifth__brands">
+				<div>
+					<img src="./img/IMAGE (3).png" alt="1">
+				</div>
+				<div>
+					<img src="./img/IMAGE (4).png" alt="2">
+				</div>
+				<div>
+					<img src="./img/IMAGE (5).png" alt="2">
+				</div>
+				<div>
+					<img src="./img/IMAGE (6).png" alt="4">
+				</div>
+				<div>
+					<img src="./img/IMAGE (7).png" alt="5">
+				</div>
+			</div>
+		</section>
+
+		<!-- section-sixth -->
+		<section class="section-sixth">
+			<h5 class="section-sixth__title">Recent Projects</h5>
+			<p class="section-sixth__text">With tools to make every part of your process more human and a support team excited to help you, getting started with us never been easier.</p>
+			<div class="section-sixth__choices">
+
+				<div class="section-sixth__choices__choice">
+					<img src="./img/IMAGE (8).png" alt="111">
+					<div class="section-sixth__choices__choice__wrapper">
+						<div>
+							<h4 class="section-sixth__choices__choice__wrapper__title">Winery Dry Creek Building</h4>
+							<p class="section-sixth__choices__choice__wrapper__text">Art Modern</p>
+						</div>
+						<a href="#" class="section-sixth__choices__choice__wrapper__btn"><i class="fa-solid fa-chevron-right"></i></a>
+					</div>
+				</div>
+
+
+				<div class="section-sixth__choices__choice">
+					<img src="./img/IMAGE (9).png" alt="111">
+					<div class="section-sixth__choices__choice__wrapper">
+						<div>
+							<h4 class="section-sixth__choices__choice__wrapper__title">Winery Dry Creek Building</h4>
+							<p class="section-sixth__choices__choice__wrapper__text">Art Modern</p>
+						</div>
+						<a href="#" class="section-sixth__choices__choice__wrapper__btn"><i class="fa-solid fa-chevron-right"></i></a>
+					</div>
+				</div>
+
+				<div class="section-sixth__choices__choice">
+					<img src="./img/IMAGE (10).png" alt="111">
+					<div class="section-sixth__choices__choice__wrapper">
+						<div>
+							<h4 class="section-sixth__choices__choice__wrapper__title">Winery Dry Creek Building</h4>
+							<p class="section-sixth__choices__choice__wrapper__text">Art Modern</p>
+						</div>
+						<a href="#" class="section-sixth__choices__choice__wrapper__btn"><i class="fa-solid fa-chevron-right"></i></a>
+					</div>
+				</div>
+
+				<div class="section-sixth__choices__choice">
+					<img src="./img/IMAGE (11).png" alt="111">
+					<div class="section-sixth__choices__choice__wrapper">
+						<div>
+							<h4 class="section-sixth__choices__choice__wrapper__title">Winery Dry Creek Building</h4>
+							<p class="section-sixth__choices__choice__wrapper__text">Art Modern</p>
+						</div>
+						<a href="#" class="section-sixth__choices__choice__wrapper__btn"><i class="fa-solid fa-chevron-right"></i></a>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- section-seventh -->
+		<section class="section-seventh">
+			<div class="section-seventh__block">
+				<h5 class="section-seventh__block__title">12</h5>
+				<p class="section-seventh__block__text">Years Of Experiance</p>
+			</div>
+
+			<div class="section-seventh__block">
+				<h5 class="section-seventh__block__title">5K</h5>
+				<p class="section-seventh__block__text">Success Project</p>
+			</div>
+
+			<div class="section-seventh__block">
+				<h5 class="section-seventh__block__title">1K</h5>
+				<p class="section-seventh__block__text">Active Project</p>
+			</div>
+
+			<div class="section-seventh__block">
+				<h5 class="section-seventh__block__title">4K</h5>
+				<p class="section-seventh__block__text">Happy Customers</p>
+			</div>
+		</section>
+
+		<!-- section-eighth -->
+		<section class="section-eighth">
+			<h5 class="section-eighth__title">Recent Blogs</h5>
+			<p class="section-eighth__text">Get updates about our latest trends and techniques used in interior design project works.</p>
+		
+			<div class="section-eighth__blogs">
+				<div class="section-eighth__blogs__item">
+					<img src="./img/Frame (1).png" alt="">
+					<h6 class="section-eighth__blogs__item__title">Residential Interior Designer In New York, USA</h6>
+					<div class="section-eighth__blogs__item__wrapper">
+						<div>
+							<p class="section-eighth__blogs__item__date">November 23, 2021</p>
+						</div>
+						<a href="" class="section-eighth__blogs__item__btn"><i class="fa-solid fa-chevron-right"></i></a>
+					</div>
+				</div>
+
+				<div class="section-eighth__blogs__item">
+					<img src="./img/Frame (2).png" alt="">
+					<h6 class="section-eighth__blogs__item__title">How To Choose The Best Wall Art & Decor House?</h6>
+					<div class="section-eighth__blogs__item__wrapper">
+						<div>
+							<p class="section-eighth__blogs__item__date">November 23, 2021</p>
+						</div>
+						<a href="" class="section-eighth__blogs__item__btn"><i class="fa-solid fa-chevron-right"></i></a>
+					</div>
+				</div>
+
+				<div class="section-eighth__blogs__item">
+					<img src="./img/Frame (3).png" alt="">
+					<h6 class="section-eighth__blogs__item__title">Tips To Increase The Interior Value Of Your House</h6>
+					<div class="section-eighth__blogs__item__wrapper">
+						<div>
+							<p class="section-eighth__blogs__item__date">November 23, 2021</p>
+						</div>
+						<a href="" class="section-eighth__blogs__item__btn"><i class="fa-solid fa-chevron-right"></i></a>
+					</div>
+				</div>
+
+				<div class="section-eighth__blogs__item">
+					<img src="./img/Frame (4).png" alt="">
+					<h6 class="section-eighth__blogs__item__title">Best Solution For Any Office & Business Interior</h6>
+					<div class="section-eighth__blogs__item__wrapper">
+						<div>
+							<p class="section-eighth__blogs__item__date">November 23, 2021</p>
+						</div>
+						<a href="" class="section-eighth__blogs__item__btn"><i class="fa-solid fa-chevron-right"></i></a>
+					</div>
+				</div>
+
+				<div class="section-eighth__blogs__item">
+					<img src="./img/Frame (5).png" alt="">
+					<h6 class="section-eighth__blogs__item__title">Get Solution For Building Construction Work</h6>
+					<div class="section-eighth__blogs__item__wrapper">
+						<div>
+							<p class="section-eighth__blogs__item__date">November 23, 2021</p>
+						</div>
+						<a href="" class="section-eighth__blogs__item__btn"><i class="fa-solid fa-chevron-right"></i></a>
+					</div>
+				</div>
+
+				<div class="section-eighth__blogs__item">
+					<img src="./img/Frame (6).png" alt="">
+					<h6 class="section-eighth__blogs__item__title">Attain The Best Finish For The Kitchen Cabinets</h6>
+					<div class="section-eighth__blogs__item__wrapper">
+						<div>
+							<p class="section-eighth__blogs__item__date">November 23, 2021</p>
+						</div>
+						<a href="" class="section-eighth__blogs__item__btn"><i class="fa-solid fa-chevron-right"></i></a>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- sectin-ninth -->
+		<section class="section-ninth">
+			<h6 class="section-ninth__title">Wanna join the interno?</h6>
+			<p class="section-ninth__text">Contact Us & Get a Free Consultation</p>
+			<a href="" class="section-ninth__btn">Connect With us</a>
+		</section>
+
+		<!-- section-tenth -->
+		<section class="section-tenth">
+			<div class="section-tenth__block">
+				<img src="./img/IMAGE.png" alt="">
+				<p class="section-tenth__block__text">We are the leading architect and interior design firm in the world.</p>
+				<div class="section-tenth__block__wrapper">
+					<a class="section-tenth__block__wrapper__link" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+					<a class="section-tenth__block__wrapper__link" href="#"><i class="fa-brands fa-twitter"></i></a>
+					<a class="section-tenth__block__wrapper__link" href="#"><i class="fa-brands fa-invision"></i></a>
+					<a class="section-tenth__block__wrapper__link" href="#"><i class="fa-brands fa-instagram"></i></a>
+				</div>
+			</div>
+
+			<div class="section-tenth__block">
+				<h6 class="section-tenth__block__title">Pages</h6>
+				<a class="section-tenth__block__link" href="">Style Guide</a>
+				<a class="section-tenth__block__link" href="">Protected</a>
+				<a class="section-tenth__block__link" href="">Licenses</a>
+				<a class="section-tenth__block__link" href="">Changelog</a>
+				<a class="section-tenth__block__link" href="">404</a>
+			</div>
+
+			<div class="section-tenth__block">
+				<h6 class="section-tenth__block__title">Explore</h6>
+				<a class="section-tenth__block__link" href="">About Us</a>
+				<a class="section-tenth__block__link" href="">Recent Blog</a>
+				<a class="section-tenth__block__link" href="">Pricing Plan</a>
+				<a class="section-tenth__block__link" href="">Our Projects</a>
+				<a class="section-tenth__block__link" href="">Contact Us</a>
+			</div>
+
+			<div class="section-tenth__block">
+				<h6 class="section-tenth__block__title">Contact</h6>
+				<a class="section-tenth__block__link address" href="">53, East Birchwood Ave. Brooklyn, New York 11201, USA.</a>
+				<a class="section-tenth__block__link" href="">contact@interno.com</a>
+				<a class="section-tenth__block__link" href="">(123) 456 - 7890</a>
+			</div>
+		</section>
+	</main>
+	<hr>
+	<footer class="footer">
+		<p class="footer__text">Copyright © Interno | Designed by <span>Victorflow</span> Templates - Powered by <span>Webflow</span></p>
+	</footer>
+	
+
+	<script src="https://kit.fontawesome.com/28fe7b24bf.js" crossorigin="anonymous"></script>
+	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
