--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Jost&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://kit.fontawesome.com/28fe7b24bf.css" crossorigin="anonymous">
 	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/navbar.css">
 </head>
 <body>
 	<!-- header -->
@@ -17,15 +18,38 @@
 		<div>
 			<a href="" class="header__item">Home</a>
 			<a href="#" class="header__item">About Us</a>
-			<a href="#" class="header__item">Services</a>
-			<a href="#" class="header__item">Pages</a>
-			<a href="#" class="header__item">Contact Us</a>
+			<a href="#services" class="header__item">Services</a>
+			<a href="#pages" class="header__item">Pages</a>
+			<a href="#contact" class="header__item">Contact Us</a>
 		</div>
 	</header>
-	
+	<!-- header-small -->
+	<header class="header-small">
+		<nav>
+	      	<div class="navbar">
+		        <div class="container nav-container">
+		            <input class="checkbox" type="checkbox" name="" id="" />
+		            <div class="hamburger-lines">
+		              	<span class="line line1"></span>
+		              	<span class="line line2"></span>
+		              	<span class="line line3"></span>
+		            </div>  
+		          	<div class="logo">
+		            	<a href="" class=""><img src="./img/IMAGE.png" alt=""></a>
+		          	</div>
+		          	<div class="menu-items">
+			            <li><a class="item" href="">Home</a></li>
+			            <li><a class="item" href="#">About Us</a></li>
+			            <li><a class="item" href="#services">Services</a></li>
+			            <li><a class="item" href="#pages">Pages</a></li>
+			            <li><a class="item" href="#contact">Contact Us</a></li>
+		          	</div>
+		        </div>
+	      	</div>
+	    </nav>
+	</header>
 	<!-- main -->
 	<main class="main">
-
 		<!-- section-first -->
 		<section class="section-first">
 			<div class="section-first__block">
@@ -34,7 +58,6 @@
 				<a href="" class="section-first__block__btn">Get Started</a>
 			</div>
 		</section>
-
 		<!-- section-second -->
 		<secton class="section-second">
 			<div class="section-second__services">
@@ -43,13 +66,11 @@
 					<p class="section-second__services__item__text">Enhancing the interior to achieve a healthier environment for the people using right space.</p>
 					<a href="" class="section-second__services__item__link">View More</a>
 				</div>
-				
 				<div class="section-second__services__item">
 					<h2 class="section-second__services__item__title">Furniture</h2>
 					<p class="section-second__services__item__text">Movable articles that are used to make a room or building suitable for living or working.</p>
 					<a href="" class="section-second__services__item__link">View More</a>
 				</div>
-
 				<div class="section-second__services__item">
 					<h2 class="section-second__services__item__title">Flooring</h2>
 					<p class="section-second__services__item__text">Thin object any finished material applied over a floor structure to provide a walking surface.</p>
@@ -57,7 +78,6 @@
 				</div>
 			</div>
 		</secton>
-
 		<!-- section-third -->
 		<section class="section-third">
 			<div class="section-third__advice">
@@ -76,7 +96,6 @@
 			</div>
 			<img src="./img/IMAGE (2).png" alt="">
 		</section>
-
 		<!-- section-fourth -->
 		<section class="section-fourth">
 			<h4 class="section-fourth__title">What the People Thinks About Interno</h4>
@@ -113,36 +132,53 @@
 				</div>
 			</div>
 		</section>
-
 		<!-- section-fifth -->
 		<section class="section-fifth">
 			<div class="section-fifth__brands">
-				<div>
+				<div class="section-fifth__brands__brand">
 					<img src="./img/IMAGE (3).png" alt="1">
 				</div>
-				<div>
+				<div class="section-fifth__brands__brand">
 					<img src="./img/IMAGE (4).png" alt="2">
 				</div>
-				<div>
+				<div class="section-fifth__brands__brand">
 					<img src="./img/IMAGE (5).png" alt="2">
 				</div>
-				<div>
+				<div class="section-fifth__brands__brand">
 					<img src="./img/IMAGE (6).png" alt="4">
 				</div>
-				<div>
+				<div class="section-fifth__brands__brand">
 					<img src="./img/IMAGE (7).png" alt="5">
 				</div>
 			</div>
 		</section>
-
 		<!-- section-sixth -->
 		<section class="section-sixth">
 			<h5 class="section-sixth__title">Recent Projects</h5>
 			<p class="section-sixth__text">With tools to make every part of your process more human and a support team excited to help you, getting started with us never been easier.</p>
-			<div class="section-sixth__choices">
-
+			<div class="section-sixth__choices" id="services">
 				<div class="section-sixth__choices__choice">
-					<img src="./img/IMAGE (8).png" alt="111">
+					<img src="./img/IMAGE (8).png" alt=""class="section-sixth__choices__choice__img">
+					<div class="section-sixth__choices__choice__wrapper">
+						<div>
+							<h4 class="section-sixth__choices__choice__wrapper__title">Winery Dry Creek Building</h4>
+							<p class="section-sixth__choices__choice__wrapper__text">Art Modern</p>
+						</div>
+						<a href="#" class="section-sixth__choices__choice__wrapper__btn"><i class="fa-solid fa-chevron-right"></i></a>
+					</div>
+				</div>
+				<div class="section-sixth__choices__choice">
+					<img src="./img/IMAGE (9).png" alt=""class="section-sixth__choices__choice__img">
+					<div class="section-sixth__choices__choice__wrapper">
+						<div>
+							<h4 class="section-sixth__choices__choice__wrapper__title">Winery Dry Creek Building</h4>
+							<p class="section-sixth__choices__choice__wrapper__text">Art Modern</p>
+						</div>
+						<a href="#" class="section-sixth__choices__choice__wrapper__btn"><i class="fa-solid fa-chevron-right"></i></a>
+					</div>
+				</div>
+				<div class="section-sixth__choices__choice">
+					<img src="./img/IMAGE (10).png" alt=""class="section-sixth__choices__choice__img">
 					<div class="section-sixth__choices__choice__wrapper">
 						<div>
 							<h4 class="section-sixth__choices__choice__wrapper__title">Winery Dry Creek Building</h4>
@@ -152,31 +188,8 @@
 					</div>
 				</div>
 
-
 				<div class="section-sixth__choices__choice">
-					<img src="./img/IMAGE (9).png" alt="111">
-					<div class="section-sixth__choices__choice__wrapper">
-						<div>
-							<h4 class="section-sixth__choices__choice__wrapper__title">Winery Dry Creek Building</h4>
-							<p class="section-sixth__choices__choice__wrapper__text">Art Modern</p>
-						</div>
-						<a href="#" class="section-sixth__choices__choice__wrapper__btn"><i class="fa-solid fa-chevron-right"></i></a>
-					</div>
-				</div>
-
-				<div class="section-sixth__choices__choice">
-					<img src="./img/IMAGE (10).png" alt="111">
-					<div class="section-sixth__choices__choice__wrapper">
-						<div>
-							<h4 class="section-sixth__choices__choice__wrapper__title">Winery Dry Creek Building</h4>
-							<p class="section-sixth__choices__choice__wrapper__text">Art Modern</p>
-						</div>
-						<a href="#" class="section-sixth__choices__choice__wrapper__btn"><i class="fa-solid fa-chevron-right"></i></a>
-					</div>
-				</div>
-
-				<div class="section-sixth__choices__choice">
-					<img src="./img/IMAGE (11).png" alt="111">
+					<img src="./img/IMAGE (11).png" alt=""class="section-sixth__choices__choice__img">
 					<div class="section-sixth__choices__choice__wrapper">
 						<div>
 							<h4 class="section-sixth__choices__choice__wrapper__title">Winery Dry Creek Building</h4>
@@ -187,7 +200,6 @@
 				</div>
 			</div>
 		</section>
-
 		<!-- section-seventh -->
 		<section class="section-seventh">
 			<div class="section-seventh__block">
@@ -210,12 +222,10 @@
 				<p class="section-seventh__block__text">Happy Customers</p>
 			</div>
 		</section>
-
 		<!-- section-eighth -->
-		<section class="section-eighth">
+		<section class="section-eighth" id="pages">
 			<h5 class="section-eighth__title">Recent Blogs</h5>
 			<p class="section-eighth__text">Get updates about our latest trends and techniques used in interior design project works.</p>
-		
 			<div class="section-eighth__blogs">
 				<div class="section-eighth__blogs__item">
 					<img src="./img/Frame (1).png" alt="">
@@ -227,7 +237,6 @@
 						<a href="" class="section-eighth__blogs__item__btn"><i class="fa-solid fa-chevron-right"></i></a>
 					</div>
 				</div>
-
 				<div class="section-eighth__blogs__item">
 					<img src="./img/Frame (2).png" alt="">
 					<h6 class="section-eighth__blogs__item__title">How To Choose The Best Wall Art & Decor House?</h6>
@@ -238,7 +247,6 @@
 						<a href="" class="section-eighth__blogs__item__btn"><i class="fa-solid fa-chevron-right"></i></a>
 					</div>
 				</div>
-
 				<div class="section-eighth__blogs__item">
 					<img src="./img/Frame (3).png" alt="">
 					<h6 class="section-eighth__blogs__item__title">Tips To Increase The Interior Value Of Your House</h6>
@@ -249,7 +257,6 @@
 						<a href="" class="section-eighth__blogs__item__btn"><i class="fa-solid fa-chevron-right"></i></a>
 					</div>
 				</div>
-
 				<div class="section-eighth__blogs__item">
 					<img src="./img/Frame (4).png" alt="">
 					<h6 class="section-eighth__blogs__item__title">Best Solution For Any Office & Business Interior</h6>
@@ -260,7 +267,6 @@
 						<a href="" class="section-eighth__blogs__item__btn"><i class="fa-solid fa-chevron-right"></i></a>
 					</div>
 				</div>
-
 				<div class="section-eighth__blogs__item">
 					<img src="./img/Frame (5).png" alt="">
 					<h6 class="section-eighth__blogs__item__title">Get Solution For Building Construction Work</h6>
@@ -271,7 +277,6 @@
 						<a href="" class="section-eighth__blogs__item__btn"><i class="fa-solid fa-chevron-right"></i></a>
 					</div>
 				</div>
-
 				<div class="section-eighth__blogs__item">
 					<img src="./img/Frame (6).png" alt="">
 					<h6 class="section-eighth__blogs__item__title">Attain The Best Finish For The Kitchen Cabinets</h6>
@@ -284,16 +289,14 @@
 				</div>
 			</div>
 		</section>
-
 		<!-- sectin-ninth -->
 		<section class="section-ninth">
 			<h6 class="section-ninth__title">Wanna join the interno?</h6>
 			<p class="section-ninth__text">Contact Us & Get a Free Consultation</p>
 			<a href="" class="section-ninth__btn">Connect With us</a>
 		</section>
-
 		<!-- section-tenth -->
-		<section class="section-tenth">
+		<section class="section-tenth" id="contact">
 			<div class="section-tenth__block">
 				<img src="./img/IMAGE.png" alt="">
 				<p class="section-tenth__block__text">We are the leading architect and interior design firm in the world.</p>
@@ -304,30 +307,31 @@
 					<a class="section-tenth__block__wrapper__link" href="#"><i class="fa-brands fa-instagram"></i></a>
 				</div>
 			</div>
-
 			<div class="section-tenth__block">
-				<h6 class="section-tenth__block__title">Pages</h6>
-				<a class="section-tenth__block__link" href="">Style Guide</a>
-				<a class="section-tenth__block__link" href="">Protected</a>
-				<a class="section-tenth__block__link" href="">Licenses</a>
-				<a class="section-tenth__block__link" href="">Changelog</a>
-				<a class="section-tenth__block__link" href="">404</a>
+				<h6 class="section-tenth__block__title accordion">Pages</h6>
+				<div class="section-tenth__block__info">
+					<a class="section-tenth__block__link" href="#">Style Guide</a>
+					<a class="section-tenth__block__link" href="#">Protected</a>
+					<a class="section-tenth__block__link" href="#">Licenses</a>
+					<a class="section-tenth__block__link" href="#">Changelog</a>
+					<a class="section-tenth__block__link" href="#">404</a>	
+				</div>
 			</div>
-
 			<div class="section-tenth__block">
-				<h6 class="section-tenth__block__title">Explore</h6>
-				<a class="section-tenth__block__link" href="">About Us</a>
-				<a class="section-tenth__block__link" href="">Recent Blog</a>
-				<a class="section-tenth__block__link" href="">Pricing Plan</a>
-				<a class="section-tenth__block__link" href="">Our Projects</a>
-				<a class="section-tenth__block__link" href="">Contact Us</a>
+				<h6 class="section-tenth__block__title accordion">Explore</h6>
+				<div class="section-tenth__block__info">
+					<a class="section-tenth__block__link" href="#">About Us</a>
+					<a class="section-tenth__block__link" href="#">Recent Blog</a>
+					<a class="section-tenth__block__link" href="#">Pricing Plan</a>
+					<a class="section-tenth__block__link" href="#">Our Projects</a>
+					<a class="section-tenth__block__link" href="#">Contact Us</a>
+				</div>	
 			</div>
-
 			<div class="section-tenth__block">
 				<h6 class="section-tenth__block__title">Contact</h6>
-				<a class="section-tenth__block__link address" href="">53, East Birchwood Ave. Brooklyn, New York 11201, USA.</a>
-				<a class="section-tenth__block__link" href="">contact@interno.com</a>
-				<a class="section-tenth__block__link" href="">(123) 456 - 7890</a>
+				<a class="section-tenth__block__link address" href="#">53, East Birchwood Ave. Brooklyn, New York 11201, USA.</a>
+				<a class="section-tenth__block__link" href="#">contact@interno.com</a>
+				<a class="section-tenth__block__link" href="#">(123) 456 - 7890</a>
 			</div>
 		</section>
 	</main>
@@ -336,7 +340,7 @@
 		<p class="footer__text">Copyright © Interno | Designed by <span>Victorflow</span> Templates - Powered by <span>Webflow</span></p>
 	</footer>
 	
-
+	<script type="text/javascript" src="./js/script.js"></script>
 	<script src="https://kit.fontawesome.com/28fe7b24bf.js" crossorigin="anonymous"></script>
 	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
